--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 .project
 .settings
 target
+build
 
 *.class
 
@@ -13,7 +14,7 @@ target
 *.jar
 *.war
 *.ear
-tomcat.8080
+tomcat.*
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
