--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
 	<properties>
 		<tomcat.version>8.0.28</tomcat.version>
 
-        <scala-maven-plugin.version>3.2.2</scala-maven-plugin.version>
-        <scala.version>2.12.1</scala.version>
+        <scala-maven-plugin.version>3.2.0</scala-maven-plugin.version>
+        <scala.version>2.12.3</scala.version>
 
         <simulationClass>gatling.test.example.simulation.LoginSimulation</simulationClass>
-        <gatling.version>2.2.3</gatling.version>
+        <gatling.version>2.3.0</gatling.version>
         <gatling-maven-plugin.version>2.2.1</gatling-maven-plugin.version>
 
     </properties>
@@ -316,27 +316,27 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--<plugin>-->
-				<!--<groupId>com.spotify</groupId>-->
-				<!--<artifactId>docker-maven-plugin</artifactId>-->
-				<!--<version>0.4.13</version>-->
-				<!--<executions>-->
-					<!--<execution>-->
-						<!--<phase>package</phase>-->
-						<!--<goals>-->
-							<!--<goal>build</goal>-->
-						<!--</goals>-->
-						<!--<configuration>-->
-							<!--<imageName>${project.build.finalName}</imageName>-->
-							<!--<imageTags>-->
-								<!--<imageTag>${project.version}</imageTag>-->
-								<!--<imageTag>latest</imageTag>-->
-							<!--</imageTags>-->
-							<!--<dockerDirectory>.</dockerDirectory>-->
-						<!--</configuration>-->
-					<!--</execution>-->
-				<!--</executions>-->
-			<!--</plugin>-->
+			<!--<plugin>
+				<groupId>com.spotify</groupId>
+				<artifactId>docker-maven-plugin</artifactId>
+				<version>0.4.13</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+						<configuration>
+							<imageName>${project.build.finalName}</imageName>
+							<imageTags>
+								<imageTag>${project.version}</imageTag>
+								<imageTag>latest</imageTag>
+							</imageTags>
+							<dockerDirectory>.</dockerDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>-->
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
@@ -411,7 +411,7 @@
                         <jvmArg>-Xms512m</jvmArg>
                         <jvmArg>-Xmx2048m</jvmArg>
                     </jvmArgs>
-                    <recompileMode>incremental</recompileMode>
+                    <!--<recompileMode>incremental</recompileMode>-->
                 </configuration>
             </plugin>
             <plugin>
