Updated selenium to the latest docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     privileged: true
 
   selenium_grid_dependency:
-    image: elgalu/selenium:3.11.0-p5
+    image: elgalu/selenium:latest
 
   owasp-zap:
     image: owasp/zap2docker-stable:latest
