--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <scala.version>2.12.3</scala.version>
 
         <simulationClass>gatling.test.example.simulation.LoginSimulation</simulationClass>
-        <gatling.version>2.3.0</gatling.version>
+        <gatling.version>2.3.1</gatling.version>
         <gatling-maven-plugin.version>2.2.1</gatling-maven-plugin.version>
 
     </properties>
@@ -316,7 +316,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!--<plugin>
+			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>0.4.13</version>
@@ -336,7 +336,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>-->
+			</plugin>
             <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
